# myeditor

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  chooser.cc  chooser.h  column.cc  column.h  command.cc  command.h  editwindow.cc  editwindow.h  file.cc  file.h  filemgr.cc  filemgr.h  filewindow.cc  filewindow.h  global.h  main.cc  scratchwindow.cc  scratchwindow.h  tags  util.cc  util.h  windowmgr.cc  windowmgr.h
